refonte graphique de la page de modification de tireur + fix scrollbar modal dui + adapt routes

--- a/src/styles.css
+++ b/src/styles.css
@@ -250,3 +250,8 @@
 	color: white !important;
 	border: none !important;
 }
+
+/* Empêche que la scrollbar aparaisse lors de l'ouverture d'un modal dui */
+html {
+    scrollbar-gutter: auto !important;
+}
